--- a/dayu-web/pom.xml
+++ b/dayu-web/pom.xml
@@ -61,6 +61,10 @@
             <artifactId>knife4j-spring-boot-starter</artifactId>
         </dependency>
         <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+        </dependency>
+        <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <scope>runtime</scope>
