--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,11 @@
                 <artifactId>knife4j-spring-boot-starter</artifactId>
                 <version>2.0.8</version>
             </dependency>
+            <dependency>
+                <groupId>javax.validation</groupId>
+                <artifactId>validation-api</artifactId>
+                <version>2.0.1.Final</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
