--- a/pom.xml
+++ b/pom.xml
@@ -19,8 +19,8 @@
 
     <properties>
         <java.version>1.8</java.version>
-        <spring-boot.version>2.3.6.RELEASE</spring-boot.version>
-        <dubbo.version>2.7.8</dubbo.version>
+        <spring-boot.version>2.4.8</spring-boot.version>
+        <dubbo.version>2.7.12</dubbo.version>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
